# tiago_face_move

devel/: .catkin  _setup_util.py  local_setup.sh
devel/lib/pkgconfig/: tiago_face_move.pc
devel/share/tiago_face_move/cmake/: tiago_face_moveConfig.cmake
src/: CMakeLists.txt  package.xml
src/launch/: tiago_face_move.launch
src/scripts/: face_count.py  face_detector.py  face_follower.py  move_robot.py  move_scan.py
